src/design/plone/theme/theme/sass/components/_mainnavigation.scss
.plone-navbar-header {
    padding: 0;

    .plone-navbar-toggle {
        display: none;
        border: 0 none;
        padding: 0;
        margin: 10px 0;
        z-index: 1; //just in case
        position: relative;
        float: right;
        margin-top: 3px;
        margin-bottom: 6px;
        padding: 6px 10px;
        color: $uniba;

        background-color: transparent;
        background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
        border-color: none;
        border-radius: $border-radius-base;

        // We remove the `outline` here, but later compensate by attaching `:hover`
        // styles to `:focus`
        &:focus {
            box-shadow: none;
            outline: 0;
        }

        &:hover {
            // background-color: lighten($sitenav-link-hover-bg, 50%);
            background-color: transparent;
            border-color: transparent;
            box-shadow: none;
            .icon-bar {
                background: $uniba-dark;
            }
        }

        .icon-bar::after {
            // content: 'Menu';
            position: relative;
            color: white;
        }

        .icon-bar + .icon-bar::after {
            content: '';
        }

        /* Burger Icon */
        .icon-bar {
            display: block;
            width: 22px;
            height: 2px;
            border-radius: 1px;
            background: $uniba;
            margin-top: 2px;
        }
        .icon-bar + .icon-bar {
            margin-top: 5px;
        }
        .icon-bar + .icon-bar + .icon-bar {
            margin-bottom: 3px;
        }

        //end menu icon-bar
    }

    &.empty-navigation {
        display: none;
    }
}

@media (max-width: $mobile-menu-width) {
}

#portal-mainnavigation {
    @include antialias;

    .globalnavWrapper {
        @include make-container;
    }

    ul#portal-globalnav {
        @extend .list-inline;
        margin: 0;
        display: flex;
        padding: 1.2rem 0;

        > li {
            margin: 0 2%;

            &.has_subtree:hover > ul,
            &.has_subtree &.has_subtree:hover > ul {
                opacity: 1;
                visibility: visible;
                transition: ease-in 0.35s;
                display: block;
            }

            &.has_subtree &.has_subtree ul {
                position: absolute;
                z-index: -1;
                left: 0em;
                top: 0px;
            }

            &.has_subtree &.has_subtree:hover > ul {
                // we only shift the submenus to the right if visible
                // to prevent horizontal scrollers if not needed
                left: 16em;
            }

            &:first-child {
                margin-left: 0;
            }

            &:first-child {
                margin-left: 0;
            }

            > a {
                font-size: 1.95rem;
                font-weight: $semibold;
                display: block;
                border-bottom: 1px solid transparent;

                &:hover {
                    border-color: currentColor;
                }
            }

            a.closeMenuLink {
                display: inline-block;
            }
            .opener {
                display: none;

                & + label:after {
                    transform: rotate(0deg);
                    transition: ease-in 0.35s;
                }

                @media (max-width: $grid-float-breakpoint) {
                    &:checked + label:after {
                        transform: rotate(-180deg);
                        transition: ease-in 0.35s;
                    }
                }

                & ~ ul {
                    transition: ease-out 0.35s;
                }

                &:checked ~ ul {
                    height: auto;
                    transition: ease-in 0.35s;
                }

                @media (max-width: $grid-float-breakpoint) {
                    &:checked ~ ul {
                        visibility: visible;
                        opacity: 1;
                    }
                }
            }
            // Navigation sublevels
            ul {
                padding-left: 0;
                visibility: hidden;
                opacity: 0;
                height: 0;

                li {
                    a {
                        font-size: ceil(($font-size-base * 1.1));
                        background-color: $sitenav-bg;
                    }
                }
            }
        }
    }

    #globalnav-close {
        display: none;

        span.sr-only {
            @include sr-only;
        }
    }
}

@media (max-width: $mobile-menu-width) {
    .plone-navbar-header {
        .plone-navbar-toggle {
            float: right;
            display: block;
            position: absolute;
            right: 10px;
        }
    }

    .open {
        .plone-navbar-header {
            .plone-navbar-toggle {
                display: none;
                visibility: hidden;
            }
        }
    }

    #portal-globalnav-collapse {
        position: fixed;
        top: 0;
        right: 0;
        height: 100vh;
        width: 0;
        max-width: 75vw;
        transition: 0.2s width ease;
        overflow: hidden;
        z-index: 500;

        &.in {
            width: 500px;

            &:before {
                content: '';
                position: fixed;
                top: 0;
                left: 0;
                right: 0;
                bottom: 0;
                background-color: transparentize($color: #000000, $amount: 0.5);
            }
        }

        .container {
            padding: 0;
        }
        #portal-globalnav {
            width: 500px;
            max-width: 75vw;
            height: 100%;
            position: relative;
            background-color: #fff;
        }
        ul#portal-globalnav {
            display: block;
            padding: 0;

            > li {
                margin: 0;
                display: block;
                padding: 0;

                &.has_subtree a {
                    padding-right: 2.5em;
                }

                + li {
                    border-top: 1px solid #ddd;
                }
                > a {
                    display: block;
                    padding: 10px 16px;
                    font-size: 1.8rem;
                }
            }
        }
        .globalnavClose {
            display: block;
            background: $brand-primary;
            height: 70px;
            width: 100%;
        }
        #globalnav-close {
            position: fixed;
            z-index: 502;
            display: block;
            border: 0;
            background: transparent;
            color: #fff;
            padding: 5px 10px;
            width: 100%;
            height: 70px;
            text-align: left;
            font-size: 1.3em;

            .icon {
                border: 1px solid transparent;
                border-radius: 4px;
                padding: 3px 10px;

                &:before {
                    @include make-ita('\1f5f5');
                    vertical-align: middle;
                }
            }

            &:focus {
                .icon {
                    border-color: #fff;
                }
            }
        }
    }

    @media (max-width: $screen-xs-max) {
        #portal-mainnavigation {
            &.open {
                width: 280px;
            }
            #portal-globalnav {
                width: 280px;
            }
            .globalnavClose {
                height: 50px;
            }
            #globalnav-close {
                padding-top: 0;
                padding-bottom: 0;
                height: 50px;
                font-size: 1em;
            }
            ul#portal-globalnav {
                > li {
                    > a {
                        font-size: 1.6rem;
                    }
                    &.has_subtree {
                        .has_subtree li {
                            label {
                                right: 0.25em;

                                &:after {
                                    top: 0.5em;
                                }
                            }
                        }
                    }
                }
            }
        }
    }
}

@media (min-width: calc($mobile-menu-width + 1px)) {
    #portal-mainnavigation {
        background-color: $brand-primary;
        color: #fff;

        ul#portal-globalnav {
            > li {
                > a {
                    color: #fff;
                }
            }
        }
    }
}

